--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-sitemap": "^2.2.21",
-    "gatsby-theme-chronoblog": "^0.23.0",
+    "@thalhalla/gatsby-theme-chronoblog-thalhalla": "0.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
